<?xml version="1.0" encoding="utf-8"?>
<!--  
 * Copyright (c) 2010 Tak's Mind
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.opensource.org/licenses/eclipse-1.0.php
 * Contributors:
 *
 *    Tak's Mind - Open Subnet Calculator
 *
-->
<resources>
    <string name="app_name">Open Subnet Calculator</string>
    <string name="ipaddr">IP Address</string>
    <string name="maskbits">Masked Bits</string>
    <string name="subbits">Subnet Bits</string>
    <string name="submask">Subnet Mask</string>
    <string name="totalhost">Total Hosts</string>
    <string name="totalsubnet">Total Subnets</string>
    <string name="subnetaddr">Subnet Address</string>
    <string name="broadcastaddr">Broadcast Address</string>
    <string name="range">Range</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="calcby">Calculate By IP and: </string>
</resources>
