<?xml version="1.0" encoding="utf-8"?>
<!--  
 * Copyright (c) 2010 Tak's Mind
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.opensource.org/licenses/eclipse-1.0.php
 * Contributors:
 *
 *    Tak's Mind - Open Subnet Calculator
 *
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TableRow 
    	android:id="@+id/tableRow1" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
			android:layout_width="wrap_content" 
			android:id="@+id/textView11" 
			android:textAppearance="?android:attr/textAppearanceSmall" 
			android:layout_height="wrap_content" 
			android:text="@string/calcby" />
		<TextView 
    		android:id="@+id/priority"
    		android:textAppearance="?android:attr/textAppearanceSmall"  
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" />
    </TableRow>
    <TableRow
    	android:id="@+id/tableRow2" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">	
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView1" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/ipaddr" />
    	<EditText 
    		android:id="@+id/ipaddr" 
    		android:selectAllOnFocus="true"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" />
    	
    </TableRow>
    <TableRow 
    	android:id="@+id/tableRow3" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView2" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/maskbits" />
    	<EditText 
    		android:id="@+id/maskbits" 
    		android:selectAllOnFocus="true"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" android:numeric="integer"/>
    </TableRow>
    <TableRow 
    	android:id="@+id/tableRow4" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView3" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/subbits" />
    	<EditText 
    		android:id="@+id/subbits" 
    		android:selectAllOnFocus="true"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" android:numeric="integer"/>
    </TableRow>
    <TableRow 
    	android:id="@+id/tableRow5" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView4" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/submask" />
    	<EditText 
    		android:id="@+id/submask" 
    		android:selectAllOnFocus="true"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" />
    </TableRow>
    <TableRow 
    	android:id="@+id/tableRow6" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView5" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/totalhost" />
    	<EditText 
    		android:id="@+id/totalhost" 
    		android:selectAllOnFocus="true"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" android:numeric="integer"/>
    </TableRow>
    <TableRow 
    	android:id="@+id/tableRow7" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView6" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/totalsubnet" />
    	<EditText 
    		android:id="@+id/totalsubnet" 
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" android:numeric="integer"/>
    </TableRow>
    <TableRow 
    	android:id="@+id/tableRow8" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView7" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/subnetaddr" />
    	<EditText 
    		android:id="@+id/subnetaddr" 
    		android:selectAllOnFocus="true"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" 
    		android:editable="false"/>
    </TableRow>
    <TableRow 
    	android:id="@+id/tableRow9" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView8" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/broadcastaddr" />
    	<EditText 
    		android:id="@+id/broadcastaddr" 
    		android:selectAllOnFocus="true"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" 
    		android:editable="false"/>
    </TableRow>
    <TableRow 
    	android:id="@+id/tableRow10" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
    	<TextView 
    		android:layout_width="wrap_content" 
    		android:id="@+id/textView9" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/range" />
    	<EditText 
    		android:id="@+id/range" 
    		android:selectAllOnFocus="true"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent" android:enabled="true" android:editable="false"/>
    </TableRow>
	<TableLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <TableRow
	    	android:layout_width="wrap_content" 
    		android:id="@+id/textView10" 
    		android:textAppearance="?android:attr/textAppearanceLarge" 
    		android:layout_height="wrap_content" 
    		android:text="@string/range">
			<Button 
				android:text="@string/submit" 
				android:id="@+id/submit" 
				android:layout_width="wrap_content" 
				android:layout_height="fill_parent" android:layout_weight="0.48"/>
			<Button 
				android:text="@string/reset" 
				android:id="@+id/reset" 
				android:layout_width="wrap_content" 
				android:layout_height="fill_parent" android:layout_weight="0.43"/>
		</TableRow>
	</TableLayout>
</TableLayout>
</ScrollView>
